# Robot-simu

./: README.md  Robot4.m  robot 指令.txt
dummy-ros2_description/: package.xml  setup.py
dummy-ros2_description/launch/: gazebo.launch.py
dummy-ros2_description/urdf/: dummy-ros2.gazebo  dummy-ros2.xacro
dummy_moveit_config/: CMakeLists.txt
dummy_moveit_config/config/: moveit_controllers.yaml  ros2_controllers.yaml
dummy_moveit_config/launch/: demo.launch.py
